[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/crosshair_temp/default_crosshair.tres" type="Texture" id=1]
[ext_resource path="res://player/CameraSmoothPhysics.gd" type="Script" id=2]
[ext_resource path="res://player/Player.gd" type="Script" id=3]
[ext_resource path="res://middlescreen.gd" type="Script" id=4]
[ext_resource path="res://world_item/GunContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://world_item/guns/PM9.tscn" type="PackedScene" id=6]
[ext_resource path="res://world_item/guns/KF1.tscn" type="PackedScene" id=7]
[ext_resource path="res://world_item/guns/RF7.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/PauseMenu.tscn" type="PackedScene" id=9]

[sub_resource type="CylinderShape" id=1]
radius = 2.2
height = 5.0

[sub_resource type="CapsuleShape" id=2]
margin = 0.001
height = 3.0

[sub_resource type="CylinderShape" id=3]
height = 1.0

[sub_resource type="GDScript" id=4]
script/source = "extends Label

func _process(_delta: float) -> void:
	text = \"FPS: \" + str(Engine.get_frames_per_second())
"

[sub_resource type="GDScript" id=5]
script/source = "extends Label

func _process(_delta: float) -> void:
	text = \"VELOCITY: \" + str(State.get_state(\"DEBUG_PLAYER_VELOCITY\"))
"

[sub_resource type="GDScript" id=6]
script/source = "extends Label

func _process(_delta: float) -> void:
	text = \"Debug Ammo: \" + str(State.get_state(\"DEBUG_AMMO\"))
"

[sub_resource type="GDScript" id=7]
script/source = "extends Label

func _process(_delta: float) -> void:
	text = \"Debug Misc: \" + str(State.get_state(\"DEBUG_MISC\"))
"

[sub_resource type="CapsuleMesh" id=8]
mid_height = 3.0

[node name="Player" type="KinematicBody"]
collision_layer = 0
script = ExtResource( 3 )

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
shape = SubResource( 3 )
disabled = true

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
cull_mask = 1048573
current = true
size = 5.0
far = 300.0
script = ExtResource( 2 )

[node name="Control" type="Control" parent="Pivot/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pivot/Camera/Control"]
margin_right = 153.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSDebug" type="Label" parent="Pivot/Camera/Control/VBoxContainer"]
margin_right = 157.0
margin_bottom = 14.0
text = "FPS: 0"
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityDebug" type="Label" parent="Pivot/Camera/Control/VBoxContainer"]
margin_top = 18.0
margin_right = 157.0
margin_bottom = 32.0
text = "VELOCITY: 0"
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoDebug" type="Label" parent="Pivot/Camera/Control/VBoxContainer"]
margin_top = 36.0
margin_right = 157.0
margin_bottom = 50.0
text = "Debug Ammo: 999 - 999"
script = SubResource( 6 )

[node name="MiscDebug" type="Label" parent="Pivot/Camera/Control/VBoxContainer"]
margin_top = 54.0
margin_right = 157.0
margin_bottom = 68.0
text = "Misc Debug: NOT USED"
script = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="Pivot/Camera/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -12.0
margin_right = 24.0
margin_bottom = 12.0
mouse_filter = 2
texture = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunContainer" parent="Pivot/Camera/Control" instance=ExtResource( 5 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
world_camera_path = NodePath("../..")

[node name="PauseMenu" parent="Pivot/Camera/Control" instance=ExtResource( 9 )]

[node name="GunContainer" type="Spatial" parent="Pivot/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.619, -0.281, -0.844 )

[node name="PM9" parent="Pivot/Camera/GunContainer" instance=ExtResource( 6 )]
visible = false

[node name="KF1" parent="Pivot/Camera/GunContainer" instance=ExtResource( 7 )]
visible = false

[node name="RF7" parent="Pivot/Camera/GunContainer" instance=ExtResource( 8 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 8 )
material/0 = null

[node name="HeadLimitRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
